# DocuType

./: .coverage  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: config.py  webservice.py
app/data/: data_import_handwritten_CORTO.py  data_import_printed_handwritten_CATMUS.py
app/inference/: inference_onnx.py  model_prod_details.py  model_registry_prod_experiments.py
app/training/: training_experiments.ipynb
documentation/: mkdocs.yml
documentation/docs/: index.md
tests/: test_inference_onnx.py  test_model_prod_details.py  test_model_registry_prod_experiments.py  test_webservice.py
